successfully build an age.pipe to filter our club members by their age.

--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,6 +1,12 @@
 <h2>List of Club Members</h2>
-
-<div *ngFor="let member of members | async" class="panel panel-default">
+<div class="panel">
+  <select (change)="onChange($event.target.value)">
+    <option value="allMembers">All Members</option>
+    <option value="under25">Members under 25 years old</option>
+    <option value="25andOver">Members 25 years and older</option>
+  </select>
+</div>
+<div *ngFor="let member of members | async | age:filterByAge" class="panel panel-default">
   <div class="panel-body">
     <h3 (click)="goToDetailPage(member)"><em>{{member.first}} {{member.last}}</em> {{member.age}}</h3>
     <div *ngIf="currentRoute === '/admin'">
