--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,34 @@
+body {
+  margin: 2em;
+  background-image: url("http://www.awkwardgeeks.com/wp-content/uploads/dd-dm-1-917x1280.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+nav.navbar{
+  box-shadow: 10px 10px 10px #a5c9ff;
+  background-color: #000000;
+  color: #ffffff;
+  text-shadow: 2px 2px #a82d2d;
+}
+
 .footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 60px;
-  background-color: #f5f5f5;
+  background-color: #000000;
+  box-shadow: 10px 10px 10px 10px #a5c9ff;
   padding: 15px;
+  color: #ffffff;
+  text-shadow: 2px 2px #a82d2d;
+}
+
+
+div.panel {
+  box-shadow: 10px 10px 5px #888888;
+  background-color: #963131;
+  text-shadow: 2px 2px #ff0000;
 }
