continue tweaking our custom styles.

--- a/src/app/member-detail/member-detail.component.html
+++ b/src/app/member-detail/member-detail.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="panel">
   <h3>{{memberToDisplay?.first}} {{memberToDisplay?.last}}</h3>
   <h4>{{memberToDisplay?.age}}</h4>
   <h5>{{memberToDisplay?.characters}}</h5>
