--- a/src/app/member-edit/member-edit.component.html
+++ b/src/app/member-edit/member-edit.component.html
@@ -1,15 +1,17 @@
-<h4>Edit Member</h4>
-<label>New Member First Name:</label>
-<input [(ngModel)]="selectedMember.first">
-<br>
-<label>New Member Last Name:</label>
-<input [(ngModel)]="selectedMember.last">
-<br>
-<label>New Member Age:</label>
-<input [(ngModel)]="selectedMember.age">
-<br>
-<label>New Member Characters:</label>
-<input [(ngModel)]="selectedMember.characters">
-<button (click)="beginUpdatingMember(selectedMember)">Update</button>
-<hr>
-<button (click)="beginDeletingMember(selectedMember)">Delete</button>
+<div class="panel">
+  <h4>Edit Member</h4>
+  <label>New Member First Name:</label>
+  <input [(ngModel)]="selectedMember.first">
+  <br>
+  <label>New Member Last Name:</label>
+  <input [(ngModel)]="selectedMember.last">
+  <br>
+  <label>New Member Age:</label>
+  <input [(ngModel)]="selectedMember.age">
+  <br>
+  <label>New Member Characters:</label>
+  <input [(ngModel)]="selectedMember.characters">
+  <button (click)="beginUpdatingMember(selectedMember)">Update</button>
+  <hr>
+  <button (click)="beginDeletingMember(selectedMember)">Delete</button>
+</div>
