--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,5 @@
-<p>
-  Welcome to the page for our Dungeons and Dragons group!
-</p>
+<div class="panel">
+  <p>
+    Welcome to the page for our Dungeons and Dragons group!
+  </p>
+</div>
