--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,2 +1,4 @@
-<h1>About Us</h1>
-<p>We are a Dungeons and Dragons group.</p>
+<div class="panel">
+  <h1>About Us</h1>
+  <p>We are a Dungeons and Dragons group.</p>
+</div>
