continue working on styles, and work on bug where text input color is the same color as the input field, so the text cannot be seen.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,13 @@
-<div class="panel">
-  <h1>About Us</h1>
-  <p>We are a Dungeons and Dragons group.</p>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <div class="panel-heading">
+      <h1>About Us</h1>
+    </div>
+
+    <p>     We are a Dungeons and Dragons group that has been playing together since 2014. Most of us know each other from having worked together at Whole Foods in the Hollywood District of Portland, Oregon.</p>
+
+    <p>     After having become friends with one another and discovering we all shared an interest in fantasy we began meeting up and playing, initially using a homebrew system that the Dungeon Master, Andrew, had developed himself, but eventually switching over to the Dungeons and Dragons 5th Edition Ruleset.</p>
+
+    <p>     We typically get together on Tuesdays or Wednesdays every week or so, depending on what our schedules allow. We have plenty of really great adventures under our belt at this point, with numerous triumphant victories and deep losses, and the future inevitably holds many more.</p>
+  </div>
 </div>
