--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,7 +1,5 @@
 <div class="panel panel-default">
- <div class="panel-heading">
-   <h3 class="panel-title">Add New Member to the Club</h3>
- </div>
+   <h3>Add New Member to the Club</h3>
  <div class="panel-body">
    <div>
      <div>
