--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,13 @@
   </div>
 </nav>
 
-<div class="container" id="title">
-  <h1>
-    {{title}}
-  </h1>
-  <router-outlet></router-outlet>
+<div class="container">
+  <div class="panel-title">
+    <h1>
+      {{title}}
+    </h1>
+    <router-outlet></router-outlet>
+  </div>
 </div>
 
 <footer class="footer">
