--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,5 +1,5 @@
-<div class="panel">
-  <h2>List of Club Members</h2>
+<div class="panel-body">
+  <h2>List of Group Members</h2>
   <select (change)="onChange($event.target.value)">
     <option value="allMembers">All Members</option>
     <option value="under25">Members under 25 years old</option>
