--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,5 +1,7 @@
-<div class="panel">
-  <p>
-    Welcome to the page for our Dungeons and Dragons group!
-  </p>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <p>
+      Welcome to the page for our Dungeons and Dragons group! Feel free to browse the members and, if you're an admin, add, edit and delete them!
+    </p>
+  </div>
 </div>
