--- a/src/app/member-detail/member-detail.component.html
+++ b/src/app/member-detail/member-detail.component.html
@@ -1,5 +1,7 @@
-<div class="panel">
-  <h3>{{memberToDisplay?.first}} {{memberToDisplay?.last}}</h3>
-  <h4>{{memberToDisplay?.age}}</h4>
-  <h5>{{memberToDisplay?.characters}}</h5>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <h3>{{memberToDisplay?.first}} {{memberToDisplay?.last}}</h3>
+    <h4>{{memberToDisplay?.age}}</h4>
+    <h5>{{memberToDisplay?.characters}}</h5>
+  </div>
 </div>
