--- a/src/app/member-edit/member-edit.component.html
+++ b/src/app/member-edit/member-edit.component.html
@@ -1,4 +1,4 @@
-<div class="panel">
+<div class="panel-body">
   <h4>Edit Member</h4>
   <label>New Member First Name:</label>
   <input [(ngModel)]="selectedMember.first">
