correct bug where text in input fields would appear blank because of text color, and choose to embrace bug where default text of input fields in edit member appear blank due to text color as an intentional useful feature.

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,13 +3,13 @@
  <div class="panel-body">
    <div>
      <div>
-       <label>Member First:</label>
+       <label>Member First Name:</label>
        <br>
        <input #newFirst>
      </div>
 
      <div>
-       <label>Member Last:</label>
+       <label>Member Last Name:</label>
        <br>
        <input #newLast>
      </div>
