--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,3 @@
-input[text], select, textarea {
-color: black;
-}
 
 div.panel-title {
   font-family: Garamond;
@@ -43,4 +40,16 @@ nav.navbar{
   padding: 15px;
   color: #ffffff;
   text-shadow: 2px 2px #a82d2d;
+}
+
+button {
+  background-color: #82a3d8;
+}
+
+input, select, textarea{
+  color: #000000;
+}
+
+textarea:focus, input:focus {
+  color: #000000;
 }
